--- a/.lando.yml
+++ b/.lando.yml
@@ -3,3 +3,12 @@ recipe: drupal9
 config:
   webroot: web
   drush: true
+
+services:
+  node:
+    type: node
+
+tooling:
+  npx:
+    description: "Runs npx commands"
+    service: node
